# UniversalGaming

./: .gitignore  README.md
CpE_Controller/: boot.py  code.py
CpE_Pico_Code/: boot.py  boot_out.txt  code - Copy.py  code.py  code.py.bak  code2.py  code3.py  code3.py.bak  functions.py  hid_gamepad.py  lastestpico_code_3_23.py  simple_oled_expander.py  tiny_oled_code.py  working_code_with_display_but_no_expander.py  working_expander_but_no_oled_code.py
CpE_Pico_Code/lib/: hid_gamepad.py
UniversalGaming/: CMakeLists.txt  UniversalGaming.qmlproject  UniversalGaming.qmlproject.qtds  qmlmodules  translations.db
UniversalGaming/content/: App.qml  CMakeLists.txt  CustomScreen.ui.qml  CustomScreenItem.ui.qml  FlowSchematic.ui.qml  HomeScreen.ui.qml  HomeScreenItem.ui.qml  PresetsScreen.ui.qml  PresetsScreenItem.ui.qml  Screen01.ui.qml  SoftwareScreen.ui.qml  SoftwareScreenItem.ui.qml
UniversalGaming/imports/: CMakeLists.txt
UniversalGamingApp/: CMakeLists.txt  console.cpp  console.h  controllerlayout.cpp  controllerlayout.h  controllerlayout.ui  customlayout.cpp  customlayout.h  customlayout.ui  customtabstyle.cpp  customtabstyle.h  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  settingswidget.cpp  settingswidget.h  settingswidget.ui  terminaldialog.cpp  terminaldialog.h  terminaldialog.ui  terminalwindow.cpp  terminalwindow.h  terminalwindow.ui  tts.cpp  tts.h
UniversalGamingApp_Builds/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  myconfig.ini
(+32 files in other folders)
